fixing spacing

--- a/style.css
+++ b/style.css
@@ -128,17 +128,17 @@ form button {
 
 /* -----------about ------------ */
 
-.body {
+.about_body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.div {
+.img_wrapper {
   flex: 1;
 }
 
-.body p {
+.about_body p {
   flex: 2;
 }
 
@@ -172,12 +172,12 @@ footer p {
 
 /* --------blog---------- */
 
-.top {
+.top_section {
   display: flex;
   flex-direction: column;
 }
 
-.bottom {
+.bottom_section {
   display: flex;
   flex-direction: column;
 }
@@ -199,20 +199,21 @@ footer p {
     gap: 1rem;
   }
 
-  .body {
+  .about_body {
     flex-direction: row;
   }
 
   #download {
     flex-direction: row;
+    gap: 1rem;
   }
 
-  .top {
+  .top_section {
     flex-direction: row;
     gap: 1rem;
   }
 
-  .bottom {
+  .bottom_section {
     flex-direction: row;
     gap: 1rem;
   }
